<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <EditText
                    android:id="@+id/reg_vardas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regist_username"
                    android:textColor="@android:color/white" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regist_email"
                    android:textColor="@android:color/white" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/reg_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/regist_password"
                    android:textColor="@android:color/white" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Button style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/reg_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_submit_btn" />

                <Button style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/regist_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_submit_back" />
        </LinearLayout>

        </ScrollView>

    </LinearLayout>
