<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"/>-->

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_submit_btn" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/regist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_regist_btn" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
